--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <script>
       feather.replace();
     </script>
+    <!-- my javasrcipt -->Add commentMore actions
+    <script src="js/script.js"></script>
      
   </body>
 </html>
