--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <!-- navbar start -->
+<!-- navbar start -->
     <nav class="navbar">
       <a href="#" class="navbar-logo">SAGARA <span>KOPI</span>.</a>
 
@@ -41,12 +41,24 @@
       </div>
     </nav>
     <!-- navbar end -->
+     <!-- hero section start-->
+    <section class="hero" id="home">
+      <main class="content">
+        <h1>Jeda sejenak dengan <span>KOPI</span></h1>
+        <p>Nikmati paduan sempurna kopi pilihan kami dengan hidangan favorit Anda</p>
+        <a href="#" class="cta">Beli Sekarang</a>
+      </main>
+    </section>
+    <!-- hero section end-->
+
+
+
 
     <!-- feather icons -->
     <script>
       feather.replace();
     </script>
-    <!-- my javasrcipt -->Add commentMore actions
+    <!-- my javasrcipt -->
     <script src="js/script.js"></script>
      
   </body>
