--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
       </main>
     </section>
     <!-- hero section end-->
+     <!-- about section start -->
+    <section id="about" class="about">
+      <h2><span>Tentang</span> Kami</h2>
+
+      <div class="row">
+        <div class="about-img">
+          <img src="img/dani-ZLqxSzvVr7I-unsplash.jpg" alt="Tentang Kami" />
+        </div>
+        <div class="content">
+          <h3>kenapa SAGARA KOPI?</h3>
+          <p>
+            Di Sagara Kopi, kami percaya bahwa kenikmatan sejati lahir dari perpaduan yang sempurna. Bukan hanya sekadar kopi, kami hadir untuk mempersembahkan sebuah pengalaman rasa yang tak terlupakan, di mana kopi berkualitas tinggi kami bersua dengan aneka kreasi kuliner yang unik dan memanjakan lidah.
+          </p>
+          <p>
+            Setiap sajian di Sagara Kopi adalah bukti dari komitmen kami pada kualitas dan kesegaran. Kami berdedikasi untuk hanya menggunakan bahan-bahan terbaik dan paling fresh, memastikan setiap produk yang Anda nikmati tidak hanya lezat, tetapi juga istimewa.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- about section end -->
+
 
 
 
