--- a/index.html
+++ b/index.html
@@ -70,6 +70,84 @@
       </div>
     </section>
     <!-- about section end -->
+     <!-- Menu section start -->
+    <section id="menu" class="menu">
+      <h2><span>Menu</span> Kami</h2>
+      <p>
+        Temukan Favoritmu di Sini! Kopi kekinian, comfort food, dan camilan
+        andalan siap memanjakan lidahmu. Pilih menu favoritmu dan rasakan
+        pengalaman yang tak terlupakan!
+      </p>
+
+      <div class="row">
+        <div class="menu-card">
+          <img
+            src="img/americano.jpg"
+            alt="AMERICANO"
+            style="width: 210px; height: auto"
+          />
+          <h3 class="menu-card-title">- AMERICANO -</h3>
+          <p class="menu-card-price">IDR 20K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img/cappucino.png"
+            alt="CAPPUCINO"
+            style="width: 230px; height: auto"
+          />
+          <h3 class="menu-card-title">- CAPPUCINO -</h3>
+          <p class="menu-card-price">IDR 20K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img/matcha.png"
+            alt="MATCHA"
+            style="width: 210px; height: auto"
+          />
+          <h3 class="menu-card-title">- MATCHA -</h3>
+          <p class="menu-card-price">IDR 25K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img/ICE VANILLA LATTE.png"
+            alt="ICE VANILLA LATTE"
+            style="width: 210px; height: auto"
+          />
+          <h3 class="menu-card-title">- ICE VANILLA LATTE -</h3>
+          <p class="menu-card-price">IDR 22K</p>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="img/CINNAMON ROLL.png"
+            alt="CINNAMON ROLL"
+            style="width: 210px; height: auto"
+          />
+          <h3 class="menu-card-title">- CINNAMON ROLL -</h3>
+          <p class="menu-card-price">IDR 27K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img/COKLAT KEJU.png"
+            alt="BOLU COKLAT KEJU"
+            style="width: 200px; height: auto"
+          />
+          <h3 class="menu-card-title">- BOLU COKLAT KEJU -</h3>
+          <p class="menu-card-price">IDR 20K</p>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="img/DIMSUM.png"
+            alt="DIMSUM"
+            style="width: 200px; height: auto"
+          />
+          <h3 class="menu-card-title">- DIMSUM -</h3>
+          <p class="menu-card-price">IDR 25K</p>
+        </div>
+      </div>
+    </section>
+    <!-- Menu section end -->
 
 
 
