Membuat bagian daftar produk menggunakan card (gambar, nama, harga)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="#">Home</a>
         <a href="#about">Tentang Kami</a>
         <a href="#menu">Menu</a>
+        <a href="#products">products</a>
         <a href="#contact">Kontak</a>
       </div>
 
@@ -154,6 +155,78 @@
       </div>
     </section>
     <!-- Menu section end -->
+     <!-- products section start -->
+    <section class="products" id="products">
+      <h2><span>Produk Unggulan</span> Kami</h2>
+      <p>
+        Biji kopi pilihan dengan rasa kuat dan aroma nikmat, plus bubuk kakao
+        murni yang lembut dan pas banget buat minuman atau dessert favoritmu.
+      </p>
+      <div class="row">
+        <div class="product-card">
+            <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#"><i data-feather="eye"></i></a>
+          </div>
+           <div class="product-image">
+            <img src="img/products/matthias-oberholzer-caPzHrf1sNA-unsplash.jpg" alt="Product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Matthias kopi</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star"></i>
+            </div>
+            <div class="product-price">IDR 50K <span>IDR 95K</span></div>
+            </div>
+            </div>
+        <div class="product-card">
+            <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#"><i data-feather="eye"></i></a>
+          </div>
+           <div class="product-image">
+            <img src="img/products/kopi2.jpg" alt="Product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Hennisa kopi</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+            </div>
+            <div class="product-price">IDR 65K <span>IDR 95K</span></div>
+            </div>
+            </div>
+        <div class="product-card">
+            <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#"><i data-feather="eye"></i></a>
+          </div>
+           <div class="product-image">
+            <img src="img/products/grigorii-shcheglov-CZy0BruGzzo-unsplash.jpg" alt="Product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Sunshine Roast </h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+            </div>
+            <div class="product-price">IDR 80K <span>IDR 95K</span></div>
+            </div>
+            </div>
+            </div>
+      </section>
+    <!-- products section end -->
+
      <!-- contact section start -->
     <section id="contact" class="contact">
       <h2><span>Kontak</span> Kami</h2>
