--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
       <div class="navbar-extra">
         <a href="#" id="search-button"><i data-feather="search"></i></a>
-        <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+        <a href="#" id="shopping-cart-button"
+          ><i data-feather="shopping-cart"></i
+        ></a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
       <!-- search form start -->
@@ -46,6 +48,34 @@
         <label for="search-box"><i data-feather="search"></i></label>
       </div>
       <!-- search form end -->
+       <!-- shooping cart start -->
+      <div class="shopping-cart">
+        <div class="cart-item">
+          <img src="img/products/matthias-oberholzer-caPzHrf1sNA-unsplash.jpg" alt="Product 1" />
+          <div class="item-detail">
+            <h3>Product 1</h3>
+            <div class="item-price">IDR 50K</div>
+          </div>
+          <i data-feather="trash-2" class="remove-item"></i>
+        </div>
+        <div class="cart-item">
+          <img src="img/products/kopi2.jpg" alt="Product 2" />
+          <div class="item-detail">
+            <h3>Product 2</h3>
+            <div class="item-price">IDR 58K</div>
+          </div>
+          <i data-feather="trash-2" class="remove-item"></i>
+        </div>
+        <div class="cart-item">
+          <img src="img/products/grigorii-shcheglov-CZy0BruGzzo-unsplash.jpg" alt="Product 1" />
+          <div class="item-detail">
+            <h3>Product 1</h3>
+            <div class="item-price">IDR 50K</div>
+          </div>
+          <i data-feather="trash-2" class="remove-item"></i>
+        </div>
+      </div>
+      <!-- shooping cart end -->
     </nav>
     <!-- navbar end -->
      <!-- hero section start-->
@@ -181,26 +211,6 @@
               <i data-feather="star" class="star"></i>
             </div>
             <div class="product-price">IDR 50K <span>IDR 95K</span></div>
-            </div>
-            </div>
-        <div class="product-card">
-            <div class="product-icons">
-            <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
-          </div>
-           <div class="product-image">
-            <img src="img/products/kopi2.jpg" alt="Product 1" />
-          </div>
-          <div class="product-content">
-            <h3>Hennisa kopi</h3>
-            <div class="product-stars">
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-            </div>
-            <div class="product-price">IDR 65K <span>IDR 95K</span></div>
             </div>
             </div>
         <div class="product-card">
