--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@
         <div class="product-card">
             <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
           </div>
            <div class="product-image">
             <img src="img/products/matthias-oberholzer-caPzHrf1sNA-unsplash.jpg" alt="Product 1" />
@@ -216,10 +218,32 @@
         <div class="product-card">
             <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
+          </div>
+           <div class="product-image">
+            <img src="img/products/kopi2.jpg" alt="Product 2" />
+          </div>
+          <div class="product-content">
+            <h3>Kopi Klasik </h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star"></i>
+            </div>
+            <div class="product-price">IDR 50K <span>IDR 95K</span></div>
+            </div>
+            </div>
+        <div class="product-card">
+            <div class="product-icons">
+            <a href="#"><i data-feather="shopping-cart"></i></a>
             <a href="#"><i data-feather="eye"></i></a>
           </div>
            <div class="product-image">
-            <img src="img/products/grigorii-shcheglov-CZy0BruGzzo-unsplash.jpg" alt="Product 1" />
+            <img src="img/products/grigorii-shcheglov-CZy0BruGzzo-unsplash.jpg" alt="Product 3" />
           </div>
           <div class="product-content">
             <h3>Sunshine Roast </h3>
@@ -276,7 +300,57 @@
 
 
 
+ <!-- footer start -->
+    <footer>
+      <div class="socials">
+        <a href="#"><i data-feather="instagram"></i></a>
+        <a href="#"><i data-feather="twitter"></i></a>
+        <a href="#"><i data-feather="facebook"></i></a>
+      </div>
 
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Kontak</a>
+      </div>
+
+      <div class="credit">
+        <p>Created by <a href="">ERIKA ADISTI</a>. | &copy;2025</p>
+      </div>
+    </footer>
+    <!-- footer end -->
+<!-- modal box item detail start -->
+    <div class="modal" id="item-detail-modal">
+      <div class="modal-container">
+        <a href="#" class="close-icon"><i data-feather="x"></i></a>
+        <div class="modal-content">
+          <img src="img/products/matthias-oberholzer-caPzHrf1sNA-unsplash.jpg" alt="product 1" />
+          <div class="product-content">
+            <h3>Product 1</h3>
+            <p>
+              Nikmati cita rasa otentik dari biji kopi berkualitas tinggi,
+              dipanen langsung dari perkebunan terbaik di Indonesia. Disangrai
+              dengan cermat untuk menghasilkan aroma yang kaya dan rasa yang
+              seimbang — sempurna untuk kopi hitam, espresso, maupun manual brew
+              favoritmu.
+            </p>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class=""></i>
+            </div>
+            <div class="product-price">IDR 58K <span>IDR 97K</span></div>
+            <a href="#"
+              ><i data-feather="shopping-cart"></i> <span>add to cart</span></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- modal box item detail end -->
     <!-- feather icons -->
     <script>
       feather.replace();
