Menambahkan mask untuk bentuk custom

--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
     <!-- navbar end -->
      <!-- hero section start-->
     <section class="hero" id="home">
+        <div class="mask-container">
       <main class="content">
         <h1>Jeda sejenak dengan <span>KOPI</span></h1>
         <p>Nikmati paduan sempurna kopi pilihan kami dengan hidangan favorit Anda</p>
       </main>
+      </div>
     </section>
     <!-- hero section end-->
      <!-- about section start -->
