Update produk unggulan menggunakan alpineJs

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
     <!-- my style -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- alpineJs -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
+
+    <!-- app -->
+    <script src="src/app.js"></script>
   </head>
 
   <body>
@@ -187,13 +195,14 @@
     </section>
     <!-- Menu section end -->
      <!-- products section start -->
-    <section class="products" id="products">
+     <section class="products" id="products" x-data="products">
       <h2><span>Produk Unggulan</span> Kami</h2>
       <p>
         Biji kopi pilihan dengan rasa kuat dan aroma nikmat, plus bubuk kakao
         murni yang lembut dan pas banget buat minuman atau dessert favoritmu.
       </p>
       <div class="row">
+        <template x-for="(item, index) in items" x-key="index">
         <div class="product-card">
             <div class="product-icons">
             <a href="#"><i data-feather="shopping-cart"></i></a>
@@ -202,10 +211,10 @@
             ></a>
           </div>
            <div class="product-image">
-            <img src="img/products/matthias-oberholzer-caPzHrf1sNA-unsplash.jpg" alt="Product 1" />
-          </div>
+              <img :src="'img/'+item.img" :alt="item.name",/>
+            </div>
           <div class="product-content">
-            <h3>Matthias kopi</h3>
+            <h3 x-text="item.name"></h3>
             <div class="product-stars">
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star" class="star-full"></i>
@@ -213,51 +222,10 @@
               <i data-feather="star" class="star-full"></i>
               <i data-feather="star" class="star"></i>
             </div>
-            <div class="product-price">IDR 50K <span>IDR 95K</span></div>
-            </div>
-            </div>
-        <div class="product-card">
-            <div class="product-icons">
-            <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#" class="item-detail-button"
-              ><i data-feather="eye"></i
-            ></a>
-          </div>
-           <div class="product-image">
-            <img src="img/products/kopi2.jpg" alt="Product 2" />
-          </div>
-          <div class="product-content">
-            <h3>Kopi Klasik </h3>
-            <div class="product-stars">
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star"></i>
-            </div>
-            <div class="product-price">IDR 50K <span>IDR 95K</span></div>
-            </div>
-            </div>
-        <div class="product-card">
-            <div class="product-icons">
-            <a href="#"><i data-feather="shopping-cart"></i></a>
-            <a href="#"><i data-feather="eye"></i></a>
-          </div>
-           <div class="product-image">
-            <img src="img/products/grigorii-shcheglov-CZy0BruGzzo-unsplash.jpg" alt="Product 3" />
-          </div>
-          <div class="product-content">
-            <h3>Sunshine Roast </h3>
-            <div class="product-stars">
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-              <i data-feather="star" class="star-full"></i>
-            </div>
-            <div class="product-price">IDR 80K <span>IDR 95K</span></div>
-            </div>
-            </div>
+             <div class="product-price">
+                <span x-text="item.price"></span>
+              </div>
+            </template>
             </div>
       </section>
     <!-- products section end -->
