--- a/index.html
+++ b/index.html
@@ -62,31 +62,22 @@
       </div>
       <!-- search form end -->
        <!-- shooping cart start -->
-      <div class="shopping-cart">
-        <div class="cart-item">
-          <img src="img/products/matthias-oberholzer-caPzHrf1sNA-unsplash.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 50K</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/kopi2.jpg" alt="Product 2" />
-          <div class="item-detail">
-            <h3>Product 2</h3>
-            <div class="item-price">IDR 58K</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/grigorii-shcheglov-CZy0BruGzzo-unsplash.jpg" alt="Product 1" />
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 50K</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
+        <div class="shopping-cart">
+       <template x-for="(item, index) in $store.cart.items" :key="index">Add commentMore actions
+          <div class="cart-item">
+            <img :src="'img/' + item.img" :alt="item.name" />
+            <div class="item-detail">
+              <h3 x-text="item.name"></h3>
+              <div class="item-price">
+                <span x-text="rupiah(item.price)"></span> &times;
+                <button id="remove">&minus;</button>
+                <span x-text="item.quantity"></span>
+                <button id="add">&plus;</button> &equals;
+                <span x-text="item.total"></span>
+              </div>
+            </div>
+            </div>
+        </template>
       </div>
       <!-- shooping cart end -->
     </nav>
